--- a/application.properties
+++ b/application.properties
@@ -1,12 +1,9 @@
 #
 #JDBC properties
 #
-#spring.datasource.url=jdbc:mysql://Full2020-86396:3306/employee_directory?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-#spring.datasource.username=mpolec
-#spring.datasource.password=mpolec
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://Full2020-86396:3306/employee_directory?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=mpolec
+spring.datasource.password=mpolec
 
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
