--- a/application.properties
+++ b/application.properties
@@ -1,10 +1,9 @@
 #
 #JDBC properties
 #
-spring.datasource.url=jdbc:mysql://Full2020-86396:3306/employee_directory?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=mpolec
-spring.datasource.password=mpolec
-
+spring.datasource.url=jdbc:mysql://Full2020-86380:3306/employees?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=aoleszczuk
+spring.datasource.password=aoleszczuk
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=false
