--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #
 #JDBC properties
 #
-spring.datasource.url=jdbc:mysql://Full2020-86380:3306/students?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://Full2020-86380:3306/employees?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=aoleszczuk
 spring.datasource.password=aoleszczuk
 
