--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 #JDBC properties
 #
 spring.datasource.url=jdbc:mysql://Full2020-86380:3306/students?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.username=aoleszczuk
+spring.datasource.password=aoleszczuk
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=false
